[Auld Lang Syne] Chordbook entry will be added (LaTeX)

--- a/src/auld_lang_syne/LaTeX/auld_lang_syne.tex
+++ b/src/auld_lang_syne/LaTeX/auld_lang_syne.tex
@@ -3,32 +3,63 @@
 \stepcounter{subsection}
 
 \beginsong{Auld Lang Syne}[%
-    by={Unknown},
+    by={Scottish Traditional},
     cr={},
     li={},
     index={auld_lang_syne}]
 
     \phantomsection
-    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Auld Lang Syne} --- Unknown}
+    \addcontentsline{toc}{subsection}{\thesubsection \quad \textbf{Auld Lang Syne} --- Scottish Traditional}
 
     \label{auld_lang_syne}
 
+    \capo{4}
+
     \begin{center}
-        \gtab{C}{332010:342010}     % \gtab{<CHORDNAME>}{<FRETS>}{<FINGERING>}
-        \gtab{G}{320033:210034}
-        \gtab{F}{133411:134211}
+        \gtab{C}{X32010:032010}             % \gtab{<CHORDNAME>}{<FRETS>}{<FINGERING>}
+        \gtab{Am}{X02210:002310}
+        \gtab{Gsus2}{300030:300040}
+        \gtab{G/B}{X20030:020040}
+        \gtab{C2}{X32013:023014}
+        \gtab{Fmaj7}{XX3555:001333}
+        \gtab{Fmaj7(#11)}{XX34X5:001203}
+        \gtab{Fmaj7(no5)}{1X32XX:104200}
+        \gtab{G}{3X00XX:300000}
+        \gtab{Csus4}{X3301X:034010}
     \end{center}
 
     \beginverse\memorize[verse]
-        Example verse ...
-    \endverse
-
-    \beginverse\replay[verse]
+        Should \[C]Auld Acqu\[Am]aintance b\[Gsus2]e forg\[G/B]ot
+        And n\[C]ever brought t\[C2]o m\[Fmaj7]ind \[Fmaj7(#11)]
+        Should \[C]Auld Acqu\[Am]aintance b\[Gsus2]e forg\[G/B]ot
+        And d\[Am]ays of \[Fmaj7(no5)]Auld L\[G]ang S\[Csus4]yne \[C]
     \endverse
 
     \beginchorus\memorize[chorus]
+        F\[Fmaj7(#11)]or \[C2]Auld L\[Am]ang S\[Gsus2]yne my d\[G/B]ear
+        F\[Fmaj7(#11)]or \[C2]Auld L\[C]\[C2]ang S\[Fmaj7]yne \[Fmaj7(#11)]
+        We'll t\[C2]ake a c\[Am]up of k\[Gsus2]indness y\[G/B]et
+        For \[Am]Auld L\[Fmaj7(no5)]\[G]ang S\[Csus4]yne \[C]
     \endchorus
 
-    \beginverse*\memorize[bridge]
+    \beginverse\replay[verse]
+        And h^ere's a h^and my tr^usty fr^iend
+        That g^ives a hand t^o th^ine ^
+        We'll t^ake a c^up of k^indness y^et
+        For ^Auld L^^ang S^yne ^
+    \endverse
+
+    \beginchorus\replay[chorus]
+        F^or ^Auld L^ang S^yne my d^ear
+        F^or ^Auld L^^ang S^yne ^
+        We'll t^ake a c^up of k^indness y^et
+        For A^uld L^^ang S^yne ^
+    \endchorus
+
+    \beginverse\replay[chorus]
+        Sh^ould ^Auld Acqu^aintance b^e forg^ot
+        ^And n^ever br^ought t^o m^ind ^
+        Should ^Auld Acqu^aintance b^e forg^ot
+        And d^ays of A^uld L^ang S^yne ^
     \endverse
 \endsong
