--- a/TeX/Chordbook/Chordbook.tex
+++ b/TeX/Chordbook/Chordbook.tex
@@ -67,7 +67,7 @@
 \clearpage
 \songsection{Folk / Medieval / Traditional}
     \begin{songs}{}
-        %\input{../src/auld_lang_syne/LaTeX/auld_lang_syne}                                                                  \sclearpage
+        \input{../src/auld_lang_syne/LaTeX/auld_lang_syne}                                                                  \sclearpage
         \input{../src/das_bier_ich_in_der_rechten_trug/LaTeX/das_bier_ich_in_der_rechten_trug}                              \sclearpage
         %\input{../src/davy_jones_theme/LaTeX/davy_jones_theme}                                                              \sclearpage
         \input{../src/der_wandersmann/LaTeX/der_wandersmann}                                                                \sclearpage
