Changing E-Mail adresses.

--- a/TeX/download.tex
+++ b/TeX/download.tex
@@ -3,7 +3,10 @@
 \begin{center}
     \begin{minipage}[h]{0.7\textwidth}
         \begin{tcolorbox}[colback=blue!7,colframe=blue!70!black,fonttitle=\bfseries,title=Download]
-            Du m\"{o}chtest das Chordbook haben? Schau in mein \href{https://github.com/hringriin/chordbook/wiki}{Wiki} auf \texttt{https://github.com/hringriin/chordbook/wiki} und finde heraus, wie Du es herunterladen kannst.
+            Du m\"{o}chtest das Chordbook haben? Schau in mein
+            \href{https://github.com/hringriin/chordbook/wiki}{Wiki} auf
+            \texttt{https://github.com/hringriin/chordbook/wiki} und finde
+            heraus, wie Du es herunterladen kannst.
         \end{tcolorbox}
     \end{minipage}
 \end{center}
