--- a/TeX/Disclaimer.tex
+++ b/TeX/Disclaimer.tex
@@ -7,7 +7,7 @@
                 Dieses \textit{Chordbook} stellt eine pers\"{o}nliche und vielf\"{a}ltige Sammlung von Liedgut dar, die ich \"{u}ber die Jahre gesammelt habe.
                 Ich erhebe keinen Anspruch auf Eigentum oder Richtigkeit der Dargestellten Texte oder Akkorde, z.T. habe ich sie von anderen Menschen \"{u}bernommen und mit der Zeit selbst abgewandelt, z.T. habe ich sie mir selber durch H\"{o}ren oder Video-Material abkupfern k\"{o}nnen. \par\medskip
 
-                Sollte es Einw\"{a}nde gegen ein oder mehrere Lieder oder Texte geben, bin ich \"{u}ber meine E-Mail Adresse \href{mailto:hringriin@gmail.com}{\texttt{hringriin@gmail.com}} erreichbar. \par\medskip
+                Sollte es Einw\"{a}nde gegen ein oder mehrere Lieder oder Texte geben, bin ich \"{u}ber meine E-Mail Adresse \href{mailto:chordbook@barzh.de}{\texttt{chordbook@barzh.de}} erreichbar. \par\medskip
 
                 Dank \textsc{Fagus vom Friedrichshain} konnte ich mein Chordbook um einige St\"{u}cke erweitern.
                 Seine Beitr\"{a}ge sind gekennzeichnet oder werden noch gekennzeichnet werden.
